# k8s-practice

./: .env.example  .gitignore  ALB-INGRESS-SETUP.md  CONFIGURATION-SUMMARY.md  GitOps-Guide.md  QUICK-REFERENCE.md  README.md  check-deployment.sh  deploy-argocd.sh  docker-compose.yml
AI/: .env.example  Dockerfile.dev  Dockerfile.training  Makefile
ai-service/: .gitignore  pyproject.toml  readme.md
ai-service/.github/workflows/: trigger.yml
ai-service/app/api/: dispatch.py  email.py  health.py  summary.py
ai-service/app/custom_types/: customer_service_types.py
ai-service/app/services/: call_handler.py  call_summary.py  ics_lib.py  llm_service.py  llm_speech_corrector.py  ses_email.py
ai-service/app/utils/: mcp_parse.py
ai-service/app/utils/prompts/: __init__.py  customer_info_prompts.py
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.training  Dockerfile.uat  README.md  eslint.config.mjs  jest.config.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json
docs/: ALB-INGRESS-SETUP.md  GitOps-Guide.md  QUICK-REFERENCE.md
frontend/: .dockerignore  .editorconfig  .gitignore  DOCKER_COMPOSE_GUIDE.md  Dockerfile  Dockerfile.dev  Dockerfile.training  Dockerfile.uat  docker-compose.yml  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  readme.md  tsconfig.json
helm/: Chart.yaml  values-prod.yaml  values-uat.yaml  values.yaml
infra/: .terraformignore
k8s/: ai-service-uat-app.yaml.ignored  aws-load-balancer-controller-uat-app.yaml  backend-uat-app.yaml.ignored  frontend-uat-app.yaml  (+1 more)
(+619 files in other folders)
