[project]
name = "uv-fastapi-example"
version = "0.1.0"
description = "AI Service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "langchain-openai>=0.3.18",
    "langgraph>=0.2.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.11.12",
    "redis>=5.0.0",
    "aiosmtplib>=4.0.1",
    "fastapi-mcp>=0.4.0",
    "icalendar>=6.3.1",
    "ics>=0.7.2",
    "pendulum>=3.1.0",
    "types-redis>=4.6.0.20241004",
    "pytest-cov>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pylint>=2.17.0",
]

[tool.mypy]
python_version = "3.11"
packages = ["app"]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
